# fastapi-websocket

./: README.md  pyproject.toml
src/: alembic.ini  docker-compose.yml  main.py  pyproject.toml
src/app/chat/: router.py
src/app/chat/managers/: web_socket_manager.py
src/app/chat/models/: message.py  room.py
src/app/chat/repositorys/: message_repository.py  room_repository.py
src/app/chat/services/: message_service.py  room_service.py
src/app/user/models/: user.py
src/app/user/repositorys/: user_repository.py
src/app/user/services/: mock_user_service.py
src/common/: post_construct.py
src/common/handlers/: router_handler.py  staticfile_handler.py
src/common/models/: base.py  base_model.py
src/core/: __init__.py  cache.py  config.py
src/core/database/: connection.py  connection_async.py  settings.py
src/core/database/migrations/: env.py
src/core/database/migrations/versions/: 20241005_170541_47e80896a38b_init.py
src/resources/static/: app.js  styles.css
src/resources/templates/: chat.html  index.html
