[tool.poetry]
name = "fastapi-websocket"
version = "0.1.0"
description = ""
authors = ["taewoo-dev <twin9774@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.0"}
uvicorn = "^0.31.0"
black = "^24.8.0"
python-multipart = "^0.0.10"
bcrypt = "^4.2.0"
pyjwt = "^2.9.0"
sqlalchemy = "^2.0.35"
pymysql = "^1.1.1"
cryptography = "^43.0.1"
aiomysql = "^0.2.0"
greenlet = "^3.1.1"
sqlalchemy-utils = "^0.41.2"
alembic = "^1.13.3"
pydantic-settings = "^2.5.2"
jinja2 = "^3.1.4"
redis = "^5.1.0"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"
pydantic = "^2.9.2"
tortoise-orm = {extras = ["asyncmy"], version = "^0.21.6"}
aerich = "^0.7.2"

[tool.mypy]
python_version = 3.11
strict = true
plugins = [
    "pydantic.mypy"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
isort = "^5.13.2"
black = "^24.8.0"
mypy = "^1.11.2"
coverage = "^7.6.1"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
